--- a/pages/project-bank-churned.html
+++ b/pages/project-bank-churned.html
@@ -74,7 +74,7 @@
 
                 <div class="swiper-slide">
                   <img
-                    src="../assets/img/portfolio/"
+                    src="../assets/img/portfolio/project-bank-churned/slide-1.png"
                     alt=""
                   />
                 </div>
@@ -100,7 +100,7 @@
                 </li>
               </ul>
               <br />
-              <h3>Details</h3>
+              <!-- <h3>Details</h3> -->
               <!-- <p>
                 //
                 //
