--- a/pages/project-churn-prediction.html
+++ b/pages/project-churn-prediction.html
@@ -207,6 +207,9 @@ $a = count(glob("../assets/img/portfolio/churn-prediction/*.png", GLOB_BRACE));
             <div class="portfolio-info">
               <h3>Project Information</h3>
               <ul>
+                <li>
+                  <strong>Project name</strong> : Telecom CHurn Prediction
+                </li>
                 <li><strong>Category</strong> : Machine Learning, Bussines</li>
                 <li><strong>Project date</strong> : 01 October, 2022</li>
                 <li>
