--- a/pages/project-customers-churn.html
+++ b/pages/project-customers-churn.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title> Project - European Hotel Satisfacrion Score</title>
-    <meta content="Project European Hotel Satisfacrion Score Python" name="description" />
-    <meta content="Project European Hotel Satisfacrion Score Python" name="keywords" />
+    <title> Project - Customers Churn </title>
+    <meta content="Project  Customers Churn menggunakan Python" name="description" />
+    <meta content="Project  Customers Churn menggunakan Python" name="keywords" />
 
     <!-- Favicons -->
     <link href="../assets/img/favicon.png" rel="icon" />
@@ -74,7 +74,7 @@
 
                 <div class="swiper-slide">
                   <img
-                    src="../assets/img/portfolio/project-european-hotel/slide-1.png"
+                    src="../assets/img/portfolio/project-customers-churn/slide-1.png"
                     alt=""
                   />
                 </div>
@@ -88,12 +88,10 @@
             <div class="portfolio-info">
               <h3>Project Information</h3>
               <ul>
-                <li><strong>Project name</strong> : European Hotel Satisfaction Score
-                  </li>
                 <li>
-                  <strong>Category</strong> : Business, Satisfaction
+                  <strong>Category</strong> : Bussiness, Finance, Bank
                 </li>
-                <li><strong>Project date</strong> : </li>
+                <li><strong>Project date</strong> : October 2022</li>
                 <li>
                   <strong>Project URL</strong> :
                   <a href="https://github.com/maulanakavaldo/"
@@ -102,10 +100,12 @@
                 </li>
               </ul>
               <br />
-              <h3>Details</h3>
-              <p>
-                Tujuan dari project ini untuk mendapatkan insight dari data dan melihat kepuasan pelanggan disetiap pelayanan yang diberikan untuk meningkatkan pelayanan yang diperlukan serta meningkatkan rating.
-              </p>
+              <!-- <h3>Details</h3> -->
+              <!-- <p>
+                //
+                //
+                //
+              </p> -->
               </p>
             </div>
           </div>
