--- a/pages/project-emotion-recognition.html
+++ b/pages/project-emotion-recognition.html
@@ -79,7 +79,10 @@
               ?> -->
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/" alt="" />
+                  <img
+                    src="../assets/img/portfolio/project-emotion-recognition/slide-1.png"
+                    alt=""
+                  />
                 </div>
               </div>
               <div class="swiper-pagination"></div>
@@ -90,8 +93,11 @@
             <div class="portfolio-info">
               <h3>Project Information</h3>
               <ul>
-                <li><strong>Category</strong> : Data Science, Emotion</li>
-                <!-- <li><strong>Client</strong>: ASU Company</li> -->
+                <li><strong>Project name</strong> : Emotion Recognition</li>
+                <li>
+                  <strong>Category</strong> : Machine Learning, Classification,
+                  Recognition, Emotion
+                </li>
                 <li><strong>Project date</strong> : Januari-Februari 2022</li>
                 <li>
                   <strong>Project URL</strong> :
@@ -100,9 +106,13 @@
               </ul>
               <br />
               <h3>Details</h3>
-              <!-- <p>
-                
-              </p> -->
+              <p>
+                Tujuan dari project ini untuk melakukan klasifikasi emosi
+                seseorang dengan menggunakan suara berupa hasil rekaman.
+                Berbicara merupakan suatu cara yang umum untuk mengungkapkan
+                suatu ekspresi atau juga emosi. Suara dapat memberikan gambaran
+                bagaimana emosi seseorang yang berdasar pada nada dan pitch.
+              </p>
             </div>
           </div>
         </div>
