--- a/pages/project-thk.html
+++ b/pages/project-thk.html
@@ -192,6 +192,7 @@
               <h3>Project Information</h3>
               <ul>
                 <li>
+                  <li><strong>Project name</strong> : COVID-19 Death Growth & Number of Healthcare Facilities in Indonesia</li>
                   <strong>Category</strong> : Data Science, COVID-19, Health
                 </li>
                 <!-- <li><strong>Client</strong>: ASU Company</li> -->
