--- a/pages/web-practical-work.html
+++ b/pages/web-practical-work.html
@@ -140,10 +140,11 @@
               <h3>Project Information</h3>
               <ul>
                 <li>
-                  <strong>Category</strong> : System Information Management
+                  <strong>Project name</strong> : Management Information System
+                  Training & Consultant
                 </li>
-                <!-- <li><strong>Client</strong>: ASU Company</li> -->
-                <li><strong>Project date</strong> :</li>
+                <li><strong>Category</strong> : System Information</li>
+                <li><strong>Project date</strong> : March - July 2021</li>
                 <li>
                   <strong>Project URL</strong> :
                   <a href="https://github.com/maulanakavaldo/">Github</a>
