--- a/pages/web-system-recommendation.html
+++ b/pages/web-system-recommendation.html
@@ -211,9 +211,12 @@
             <div class="portfolio-info">
               <h3>Project Information</h3>
               <ul>
-                <li><strong>Category</strong> : System Recommendation</li>
-                <!-- <li><strong>Client</strong>: ASU Company</li> -->
-                <li><strong>Project date</strong> : 01 March - July 2022</li>
+                <li>
+                  <strong>Project name</strong> : Study Program Recommendation
+                  System
+                </li>
+                <li><strong>Category</strong> : Recommendation System</li>
+                <li><strong>Project date</strong> : March - June 2022</li>
                 <li>
                   <strong>Project URL</strong> :
                   <a href="https://github.com/maulanakavaldo/">Github</a>
