--- a/pages/python.html
+++ b/pages/python.html
@@ -264,12 +264,12 @@
                       alt=""
                     />
                   </div>
-                  <div class="swiper-slide">
+                  <!-- <div class="swiper-slide">
                     <img
                       src="../assets/img/certif_licen/python/py-33.png"
                       alt=""
                     />
-                  </div>
+                  </div> -->
                 </div>
                 <div class="swiper-pagination"></div>
               </div>
