--- a/index.html
+++ b/index.html
@@ -950,7 +950,7 @@
                     <img src="assets/img/testimonials/testi-1.png" class="testimonial-img" alt="">
                     <h3>Nanda Fadhli</h3>
                     <h4>Data Science and Management Coordinator at Petrosea <br>
-                    Mentor Data Science (KOMINFO x Binar Academy)</h4>                    
+                    as Mentor Data Science (KOMINFO x Binar Academy)</h4>                    
                     <p>
                       <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                       I'm really impressed with Maulana when I become a mentor of DS Bootcamp. He has good technical skill and soft skills. Among 50 students in my class, He was one of the five peoples selected as representatives to present Data Analytics Idea for better Indonesia at the G20 event in Bali yesterday . He deserves it!
