--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-6">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Maulana Kavaldo</h4>
@@ -369,13 +369,14 @@
 
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-6">
             <h3 class="resume-title">Experience</h3>
 
             <div class="resume-item">
-              <h4>Business Intelligence Analyst</h4>
+              <a href="assets/img/certif_licen/vix-muamalat.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <h4>Project-Based Intern: BI Analyst<span>&nbsp;</span><span class="bx bx-link"></span></h4></a>
               <h5>February - Present</h5>
-              <p><em>Bank Muamalat - Virtual Internship</em></p>
+              <p><em>Virtual Internship Experience | Bank Muamalat</em></p>
             </div>
             
             <!-- <div class="resume-item">
@@ -385,19 +386,21 @@
             </div> -->
 
             <div class="resume-item">
-              <a href="assets/img/certif_licen/vix-btpn.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><h4>Data Engineer <span>&nbsp;</span><span class="bx bx-link"></span></h4></a>
+              <a href="assets/img/certif_licen/vix-btpn.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <h4>Project-Based Intern: Data Engineer<span>&nbsp;</span><span class="bx bx-link"></span></h4></a>
               <!-- <h4>Data Engineer</h4> -->
               <h5>October 2022 (1 Month)</h5>
-              <p><em>BTPN Syariah - Virtual Internship</em></p>            
+              <p><em>Virtual Internship Experience | BTPN Syariah</em></p>            
               <!-- <ul>
                 <li> </li>
              </ul> -->
             </div>
             <div class="resume-item">
               <!-- <h4>Big Data Analytics</h4> -->
-              <a href="assets/img/certif_licen/vix-kimfar.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><h4>Big Data Analytics <span>&nbsp;</span><span class="bx bx-link"></span></h4></a>
+              <a href="assets/img/certif_licen/vix-kimfar.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <h4>Project-Based Intern: Big Data Analytics<span>&nbsp;</span><span class="bx bx-link"></span></h4></a>
               <h5>September 2022 (1 Month)</h5>
-              <p><em>Kimia Farma - Virtual Internship</em></p>            
+              <p><em>Virtual Internship Experience | Kimia Farma</em></p>            
               <!-- <ul>
                 <li> </li>
              </ul> -->
@@ -405,7 +408,7 @@
           </div>
 
 
-          <div class="col-lg-4">
+          <div class="col-lg-6">
             <h3 class="resume-title">Licenses & Certifications</h3>
             <div class="resume-item">
               <!-- <a href="#fga" data-gallery="portfolioGallery" class="portfolio-lightbox" ><h4>FGA: Data Science <span>&nbsp;</span><span class="bx bx-link"></span></h4></a> -->
