--- a/pages/udemy-course.html
+++ b/pages/udemy-course.html
@@ -222,6 +222,42 @@
                       alt=""
                     />
                   </div>
+                  <div class="swiper-slide">
+                    <img
+                      src="../assets/img/certif_licen/udemy/slide-26.png"
+                      alt=""
+                    />
+                  </div>
+                  <div class="swiper-slide">
+                    <img
+                      src="../assets/img/certif_licen/udemy/slide-27.png"
+                      alt=""
+                    />
+                  </div>
+                  <div class="swiper-slide">
+                    <img
+                      src="../assets/img/certif_licen/udemy/slide-28.png"
+                      alt=""
+                    />
+                  </div>
+                  <div class="swiper-slide">
+                    <img
+                      src="../assets/img/certif_licen/udemy/slide-29.png"
+                      alt=""
+                    />
+                  </div>
+                  <div class="swiper-slide">
+                    <img
+                      src="../assets/img/certif_licen/udemy/slide-30.png"
+                      alt=""
+                    />
+                  </div>
+                  <div class="swiper-slide">
+                    <img
+                      src="../assets/img/certif_licen/udemy/slide-31.png"
+                      alt=""
+                    />
+                  </div>
                 </div>
                 <div class="swiper-pagination"></div>
               </div>
