--- a/pages/project-thk.html
+++ b/pages/project-thk.html
@@ -192,16 +192,33 @@
               <h3>Project Information</h3>
               <ul>
                 <li>
-                  <li><strong>Project name</strong> : COVID-19 Death Growth & Number of Healthcare Facilities in Indonesia</li>
+                  <strong>Project name</strong> : COVID-19 Death Growth & Number
+                  of Healthcare Facilities in Indonesia
+                </li>
+                <li>
                   <strong>Category</strong> : Data Science, COVID-19, Health
                 </li>
-                <!-- <li><strong>Client</strong>: ASU Company</li> -->
                 <li><strong>Project date</strong> : October-November 2022</li>
                 <li>
                   <strong>Project URL</strong> :
                   <a href="https://github.com/maulanakavaldo/THK_Project"
                     >Github</a
                   >
+                </li>
+                <li>
+                  <strong>Team member</strong> :
+                  <a href="https://www.linkedin.com/in/muh-khairul-gemilang/"
+                    >Muhammad Khairul Gemilang</a
+                  >,
+                  <a href="https://www.linkedin.com/in/hellzliu/"
+                    >Helwis Liufandy</a
+                  >,
+                  <a href="https://www.linkedin.com/in/dzakiyaulya/"
+                    >Dzakiya Ishmatul Uly</a
+                  >,
+                  <a href="https://www.linkedin.com/in/mutiararuci/"
+                    >Mutiara Ruci</a
+                  >.
                 </li>
               </ul>
               <br />
