--- a/pages/web-system-recommendation.html
+++ b/pages/web-system-recommendation.html
@@ -221,6 +221,12 @@
                   <strong>Project URL</strong> :
                   <a href="https://github.com/maulanakavaldo/">Github</a>
                 </li>
+                <li>
+                  <strong>Demo</strong> :
+                  <a href="https://ahp-prodi.000webhostapp.com/" target="_blank"
+                    >SRP - Program Studi</a
+                  >
+                </li>
               </ul>
               <br />
               <h3>Details</h3>
