--- a/pages/hackerrank.html
+++ b/pages/hackerrank.html
@@ -58,7 +58,7 @@
       <!-- ======= Portfolio Details Section ======= -->
       <section id="portfolio-details" class="portfolio-details">
         <div class="container">
-          <div class="col-lg-11">
+          <div class="col-lg-9">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
                 <!-- <?php
@@ -75,6 +75,13 @@
                 <div class="swiper-slide">
                   <img
                     src="../assets/img/certif_licen/hackerrank/problem_solving_basic.png"
+                    alt=""
+                  />
+                </div>
+
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/certif_licen/hackerrank/problem_solving_intermediate.png"
                     alt=""
                   />
                 </div>
@@ -103,6 +110,13 @@
                 <div class="swiper-slide">
                   <img
                     src="../assets/img/certif_licen/hackerrank/sql_advanced.png"
+                    alt=""
+                  />
+                </div>
+
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/certif_licen/hackerrank/css.png"
                     alt=""
                   />
                 </div>
