--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
         <a href="https://github.com/maulana-kavaldo" target="_blank" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://linkedin.com/in/maulana-kavaldo" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://wa.me/6281393363478" target="_blank" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
-        <a href="https://drive.google.com/file/d/1lajGoTmIOjaN2fwp84Yra8DPFD6eKKlA/view?usp=share_link" target="_blank" class="bx bx-download" title="Download CV"></i></a>
+        <a href="https://instagram.com/maulana.kavaldo/" class="instagram"><i class="bx bxl-instagram"></i></a>      
+        <a href="https://drive.google.com/file/d/1lajGoTmIOjaN2fwp84Yra8DPFD6eKKlA/view?usp=share_link" target="_blank" class="bx bx-download" title="Show CV"></i></a>
         <!-- <a href="https://twitter.com/mlnkvld/" class="twitter"><i class="bx bxl-twitter"></i></a> -->
         <!-- <a href="https://instagram.com/maulana.kavaldo" class="instagram"><i class="bx bxl-instagram"></i></a> -->
         <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
@@ -1166,14 +1167,12 @@
       <h3>Maulana Kavaldo </h3>
       <!-- <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p> -->
       <div class="social-links">
-        <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
-        <a href="https://github.com/maulana-kavaldo" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-        <a href="https://linkedin.com/in/maulana-kavaldo" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://wa.me/6281393363478" target="_blank" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>        
+        <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
+        <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
+        <a href="https://github.com/maulana-kavaldo/" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+        <a href="https://linkedin.com/in/maulana-kavaldo/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://wa.me/6281393363478" target="_blank" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+        <a href="https://instagram.com/maulana.kavaldo/" class="instagram"><i class="bx bxl-instagram"></i></a>        
       </div>
       
       <div class="copyright">
