--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <a href="https://github.com/maulana-kavaldo" target="_blank" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://linkedin.com/in/maulana-kavaldo" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://wa.me/6281393363478" target="_blank" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
-        <a href="https://instagram.com/maulana.kavaldo/" class="instagram"><i class="bx bxl-instagram"></i></a>      
+        <a href="https://instagram.com/maulana.kavaldo/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>      
         <a href="https://drive.google.com/file/d/1lajGoTmIOjaN2fwp84Yra8DPFD6eKKlA/view?usp=share_link" target="_blank" class="bx bx-download" title="Show CV"></i></a>
         <!-- <a href="https://twitter.com/mlnkvld/" class="twitter"><i class="bx bxl-twitter"></i></a> -->
         <!-- <a href="https://instagram.com/maulana.kavaldo" class="instagram"><i class="bx bxl-instagram"></i></a> -->
@@ -1172,7 +1172,7 @@
         <a href="https://github.com/maulana-kavaldo/" target="_blank" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://linkedin.com/in/maulana-kavaldo/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://wa.me/6281393363478" target="_blank" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
-        <a href="https://instagram.com/maulana.kavaldo/" class="instagram"><i class="bx bxl-instagram"></i></a>        
+        <a href="https://instagram.com/maulana.kavaldo/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>        
       </div>
       
       <div class="copyright">
