--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Maulana Kavaldo</h1>
-      <p>I'm <span class="typed" data-typed-items="Fresh Graduate, Junior Data Scientist, Data Engineer, Machine Learning Entusiast"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Fresh Graduate, Jr. Data Scientist, Data Engineer, Machine Learning Entusiast"></span></p>
       <div class="social-links">
         <a href="https://github.com/maulana-kavaldo" target="_blank" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://linkedin.com/in/maulana-kavaldo" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
