--- a/pages/hackerrank.html
+++ b/pages/hackerrank.html
@@ -57,11 +57,12 @@
     <main id="main">
       <!-- ======= Portfolio Details Section ======= -->
       <section id="portfolio-details" class="portfolio-details">
-        <div class="container">
-          <div class="col-lg-10">
-            <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
-                <!-- <?php
+        <div class="container justify-content-center">
+          <div class="row justify-content-center">
+            <div class="col-lg-9">
+              <div class="portfolio-details-slider swiper">
+                <div class="swiper-wrapper align-items-center">
+                  <!-- <?php
               $a = count(glob("../assets/img/portfolio/thk/*.png", GLOB_BRACE));
 
               for ($x = 1; $x <= $a; $x++) {
@@ -72,56 +73,57 @@
 
               ?> -->
 
-                <div class="swiper-slide">
-                  <img
-                    src="../assets/img/certif_licen/hackerrank/problem_solving_basic.png"
-                    alt=""
-                  />
-                </div>
+                  <div class="swiper-slide">
+                    <img
+                      src="../assets/img/certif_licen/hackerrank/problem_solving_basic.png"
+                      alt=""
+                    />
+                  </div>
 
-                <div class="swiper-slide">
-                  <img
-                    src="../assets/img/certif_licen/hackerrank/problem_solving_intermediate.png"
-                    alt=""
-                  />
-                </div>
+                  <div class="swiper-slide">
+                    <img
+                      src="../assets/img/certif_licen/hackerrank/problem_solving_intermediate.png"
+                      alt=""
+                    />
+                  </div>
 
-                <div class="swiper-slide">
-                  <img
-                    src="../assets/img/certif_licen/hackerrank/python_basic.png"
-                    alt=""
-                  />
-                </div>
+                  <div class="swiper-slide">
+                    <img
+                      src="../assets/img/certif_licen/hackerrank/python_basic.png"
+                      alt=""
+                    />
+                  </div>
 
-                <div class="swiper-slide">
-                  <img
-                    src="../assets/img/certif_licen/hackerrank/sql_basic.png"
-                    alt=""
-                  />
-                </div>
+                  <div class="swiper-slide">
+                    <img
+                      src="../assets/img/certif_licen/hackerrank/sql_basic.png"
+                      alt=""
+                    />
+                  </div>
 
-                <div class="swiper-slide">
-                  <img
-                    src="../assets/img/certif_licen/hackerrank/sql_intermediate.png"
-                    alt=""
-                  />
-                </div>
+                  <div class="swiper-slide">
+                    <img
+                      src="../assets/img/certif_licen/hackerrank/sql_intermediate.png"
+                      alt=""
+                    />
+                  </div>
 
-                <div class="swiper-slide">
-                  <img
-                    src="../assets/img/certif_licen/hackerrank/sql_advanced.png"
-                    alt=""
-                  />
-                </div>
+                  <div class="swiper-slide">
+                    <img
+                      src="../assets/img/certif_licen/hackerrank/sql_advanced.png"
+                      alt=""
+                    />
+                  </div>
 
-                <div class="swiper-slide">
-                  <img
-                    src="../assets/img/certif_licen/hackerrank/css.png"
-                    alt=""
-                  />
+                  <div class="swiper-slide">
+                    <img
+                      src="../assets/img/certif_licen/hackerrank/css.png"
+                      alt=""
+                    />
+                  </div>
                 </div>
+                <div class="swiper-pagination"></div>
               </div>
-              <div class="swiper-pagination"></div>
             </div>
           </div>
         </div>
