--- a/index.html
+++ b/index.html
@@ -1060,7 +1060,7 @@
       </div>
 
       <br>
-      <!-- <div class="section-title">
+      <div class="section-title">
         <a href="pages/certificates.html" class="cta">
           <span>MORE</span>
           <svg width="13px" height="10px" viewBox="0 0 13 10">
@@ -1068,7 +1068,7 @@
             <polyline points="8 1 12 5 8 9"></polyline>
           </svg>
         </a>
-      </div> -->
+      </div>
     </section><!-- End Portfolio Section -->
     
     <!-- ======= Testimonials Section ======= -->
