--- a/pages/hackerrank.html
+++ b/pages/hackerrank.html
@@ -57,7 +57,7 @@
     <main id="main">
       <!-- ======= Portfolio Details Section ======= -->
       <section id="portfolio-details" class="portfolio-details">
-        <div class="container justify-content-center">
+        <div class="container">
           <div class="row justify-content-center">
             <div class="col-lg-9">
               <div class="portfolio-details-slider swiper">
