--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -75,7 +75,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Certifications & Awards</h2>
+          <h2>Certifications</h2>
           <!-- <p></p> -->
         </div>
 
@@ -83,51 +83,261 @@
           <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-py">Python</li>
-              <li data-filter=".filter-sql">SQL</li>
-              <li data-filter=".filter-r">R</li>
+              <li data-filter=".filter-seminar">Seminar</li>
+              <!-- <li data-filter=".filter-sql">SQL</li>
+              <li data-filter=".filter-seminar">R</li> -->
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
           
-          <div class="col-lg-3 col-md-6 portfolio-item filter-r">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
             <div class="portfolio-wrap">
-              <img src="../assets/img/certif_licen/minirevou.png" class="img-fluid" alt="">
+              <img src="../assets/img/certif_licen/seminar/1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <div class="portfolio-links">
-                  <a href="assets/img/certif_licen/minirevou.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                  <a href="../assets/img/certif_licen/seminnar/1.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 portfolio-item filter-r">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
             <div class="portfolio-wrap">
-              <img src="../assets/img/certif_licen/minirevou.png" class="img-fluid" alt="">
+              <img src="../assets/img/certif_licen/seminar/2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <div class="portfolio-links">
-                  <a href="assets/img/certif_licen/minirevou.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                  <a href="../assets/img/certif_licen/seminar/2.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 portfolio-item filter-r">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
             <div class="portfolio-wrap">
-              <img src="../assets/img/certif_licen/minirevou.png" class="img-fluid" alt="">
+              <img src="../assets/img/certif_licen/seminar/3.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <div class="portfolio-links">
-                  <a href="assets/img/certif_licen/minirevou.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                  <a href="../assets/img/certif_licen/seminar/3.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 portfolio-item filter-r">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
             <div class="portfolio-wrap">
-              <img src="../assets/img/certif_licen/minirevou.png" class="img-fluid" alt="">
+              <img src="../assets/img/certif_licen/seminar/4.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <div class="portfolio-links">
-                  <a href="assets/img/certif_licen/minirevou.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                  <a href="../assets/img/certif_licen/seminar/4.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/seminar/5.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/seminar/5.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/seminar/6.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/seminar/6.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/seminar/7.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/seminar/7.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/seminar/8.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/seminar/8.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/seminar/9.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/seminar/9.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/seminar/10.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/seminar/10.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/seminar/11.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/seminar/11.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/seminar/12.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/seminar/12.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/seminar/13.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/seminar/13.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/seminar/14.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/seminar/14.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/seminar/15.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/seminar/15.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/seminar/16.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/seminar/16.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/seminar/17.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/seminar/17.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/seminar/18.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/seminar/18.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/seminar/19.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/seminar/19.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/seminar/20.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/seminar/20.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/seminar/21.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/seminar/21.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/seminar/22.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/seminar/22.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/seminar/23.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/seminar/23.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/seminar/24.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/seminar/24.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/seminar/25.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/seminar/25.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
