--- a/index.html
+++ b/index.html
@@ -435,9 +435,23 @@
             <h3 class="resume-title">Experience</h3>
 
             <div class="resume-item">
+              <!-- <a href="assets/img/certif_licen/vix-muamalat.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <h4>Project-Based Intern: BI Analyst<span>&nbsp;</span><span class="bx bx-link"></span></h4></a> -->
+              <h4>Project-Based Intern: Data Scientist</h4>
+              <h5>Present</h5>
+              <p><em>Virtual Internship Experience | Home Credit Indonesia</em></p>
+              <!-- Finishing various task related with the activity of Data Scientist from Home Credit Indonesia. -->
+              <!-- <ul>
+                <li></li> 
+                <li></li> 
+                <li></li>
+              </ul> -->
+            </div>
+
+            <div class="resume-item">
               <a href="assets/img/certif_licen/vix-muamalat.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
               <h4>Project-Based Intern: BI Analyst<span>&nbsp;</span><span class="bx bx-link"></span></h4></a>
-              <h5>February - Present</h5>
+              <h5>February 2023 (1 Month)</h5>
               <p><em>Virtual Internship Experience | Bank Muamalat</em></p>
               Finishing various task related with the activity of Business Intelligence Analyst from Bank Muamalat.
               <ul>
@@ -676,6 +690,18 @@
                 <h4>  </h4>
                 <div class="portfolio-links">
                   <a href="pages/project-european-hotel.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-python filter-ml">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/dataanalyst-food-sales/food-sales.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>  </h4>
+                <div class="portfolio-links">
+                  <a href="pages/project-food-sales.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
