--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/dataanalyst-food-sales/food-sales.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>  </h4>
+                <h4> Food Sales </h4>
                 <div class="portfolio-links">
                   <a href="pages/project-food-sales.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
@@ -828,7 +828,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/fga_ds1.png" class="img-fluid img-responsive thumb" alt="">
               <div class="portfolio-info">
-                <h4>Digitalent FGA: Data Science</h4>
+                <h4>DTS FGA: Data Science</h4>
                 <!-- <p>Web</p> -->
                 <div class="portfolio-links">
                   <a href="pages/fga.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
@@ -860,53 +860,6 @@
               </div>
             </div>
           </div>
-
-          <div class="col-lg-3 col-md-6 portfolio-item filter-r">
-            <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/minidqlab.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <!-- <h4>Mini Bootcamp DQLab</h4> -->
-                <div class="portfolio-links"><a href="assets/img/certif_licen/minidqlab.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div id="dqlab" class="col-lg-3 col-md-6 portfolio-item filter-py">
-            <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/python/py-1.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Python</h4>
-                <div class="portfolio-links">
-                  <a href="pages/python.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div id="dqlab" class="col-lg-3 col-md-6 portfolio-item filter-sql">
-            <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/sql/sql-1.png" class="img-fluid" alt=""">
-              <div class="portfolio-info">
-                <h4>SQL</h4>
-                <div class="portfolio-links">
-                  <a href="pages/sql.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>  
-          
-          <div id="dqlab" class="col-lg-3 col-md-6 portfolio-item filter-r">
-            <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/r/r-1.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>R</h4>
-                <div class="portfolio-links">
-                  <a href="pages/r.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>  
 
           <div id="gcp" class="col-lg-3 col-md-6 portfolio-item filter-r">
             <div class="portfolio-wrap">
@@ -1003,8 +956,33 @@
 
           <div id="" class="col-lg-3 col-md-6 portfolio-item filter-r">
             <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/skill-builder-aws.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>AWS</h4>
+                <div class="portfolio-links">
+                  <a href="assets/img/certif_licen/skill-builder-aws.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div id="" class="col-lg-3 col-md-6 portfolio-item filter-r">
+            <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/dicoding-AWS.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>AWS</h4>
+                <div class="portfolio-links">
+                  <a href="assets/img/certif_licen/dicoding-AWS.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div id="" class="col-lg-3 col-md-6 portfolio-item filter-r">
+            <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/dicoding-1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
+                <h4>Python</h4>
                 <div class="portfolio-links">
                   <a href="assets/img/certif_licen/dicoding-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
@@ -1016,12 +994,60 @@
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/dicoding-2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
+                <h4>Data Visualization</h4>
                 <div class="portfolio-links">
                   <a href="assets/img/certif_licen/dicoding-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
           </div>
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-r">
+            <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/minidqlab.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <!-- <h4>Mini Bootcamp DQLab</h4> -->
+                <div class="portfolio-links"><a href="assets/img/certif_licen/minidqlab.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div id="dqlab" class="col-lg-3 col-md-6 portfolio-item filter-py">
+            <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/python/py-1.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Python</h4>
+                <div class="portfolio-links">
+                  <a href="pages/python.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div id="dqlab" class="col-lg-3 col-md-6 portfolio-item filter-sql">
+            <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/sql/sql-1.png" class="img-fluid" alt=""">
+              <div class="portfolio-info">
+                <h4>SQL</h4>
+                <div class="portfolio-links">
+                  <a href="pages/sql.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>  
+          
+          <div id="dqlab" class="col-lg-3 col-md-6 portfolio-item filter-r">
+            <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/r/r-1.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>R</h4>
+                <div class="portfolio-links">
+                  <a href="pages/r.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>  
 
           <div id="" class="col-lg-3 col-md-6 portfolio-item filter-r">
             <div class="portfolio-wrap">
