--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -92,7 +92,17 @@
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-          <!-- COURSE -->
+          
+          <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/seminar/26.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/seminar/26.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-course">
             <div class="portfolio-wrap">
@@ -494,9 +504,7 @@
               </div>
             </div>
           </div> -->
-
-          <!-- SEMINAR -->
-
+          
           <div class="col-lg-3 col-md-6 portfolio-item filter-seminar">
             <div class="portfolio-wrap">
               <img src="../assets/img/certif_licen/seminar/1.png" class="img-fluid" alt="">
