--- a/index.html
+++ b/index.html
@@ -357,6 +357,18 @@
             </div>
 
             <div class="resume-item">
+              <h4>Bootcamp Google Cloud Fundamental</h4>
+              <h5>Mart 2023 - Present</h5><br>
+              <em>DTS KOMINFO | Google</em>
+              <!-- <p> -->
+                <br>
+                <!-- Achievement: -->
+                <!-- <div style="margin-left: 1em;"> -->
+                <!-- <li>Overall score: /100</li> -->
+                <!-- </p> -->
+             </div>
+
+            <div class="resume-item">
               <h4>Bootcamp Data Science</h4>
               <h5>Aug - Oct 2022</h5><br>
               <em>DTS KOMINFO | Binar Academy</em>
@@ -408,7 +420,7 @@
             </div>
 
             <div class="resume-item">
-              <a href="" ><h4>Programming Language Python, SQL<span>&nbsp;</span><span class="bx bx-link"></span></h4></a>
+              <a href="#hackerrank" ><h4>Programming Language Python, SQL<span>&nbsp;</span><span class="bx bx-link"></span></h4></a>
               <!-- <h5></h5> -->
               <p><em>Hackerrank <br>
               </p>              
@@ -897,7 +909,7 @@
             </div>
           </div>
 
-          <div id="rm" class="col-lg-3 col-md-6 portfolio-item filter-r">
+          <div id="hackerrank" class="col-lg-3 col-md-6 portfolio-item filter-r">
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/hackerrank/hackerrank.png" class="img-fluid" alt="">
               <div class="portfolio-info">
