--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
               <div class="portfolio-info">
                 <!-- <h4>Google Cloud Platform</h4> -->
                 <div class="portfolio-links">
-                  <a href="https://www.cloudskillsboost.google/public_profiles/aa062bc9-81cc-4a11-9f53-025437d13c1f" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                  <a href="https://www.cloudskillsboost.google/public_profiles/aa062bc9-81cc-4a11-9f53-025437d13c1f" target="_blank" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
