--- a/index.html
+++ b/index.html
@@ -66,9 +66,12 @@
 </head>
 
 <body>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KZN6K62"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KZN6K62"
+    height="0" width="0" style="display:none;visibility:hidden">
+  </iframe>
+  </noscript>
   <!-- End Google Tag Manager (noscript) -->
   
 
@@ -114,11 +117,29 @@
   </section>
   <!-- End Hero -->
 
-  <img src="assets/img/header.png" class="img-fluid" alt="Photo Profile">
+<br>
+<!-- <div class="row">
+  <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
+    <img src='assets/img/header/homepage-partner-aws.png'  alt='AWS' height='50' width='118'>
+    <img src='assets/img/header/homepage-partner-google.png'  alt='Google' height='50' width='118'>
+    <img src='assets/img/header/homepage-partner-kemkominfo.png'  alt='Kominfo' height='50' width='118'>
+    <img src='assets/img/header/homepage-partner-microsoft.png'  alt='Microsoft' height='50' width='118'>
+    <img src='assets/img/header/homepage-partner-xl.png'  alt='XL' height='50' width='118'>
+    <img src='assets/img/header/rapid-miner.png' alt='Rapid Miner' height='50' width='118'>
+    <img src="https://cdn.cdnlogo.com/logos/g/73/google-cloud.svg" alt='Google Cloud' height='50' width='118'>
+    <img src="https://cdn.cdnlogo.com/logos/h/58/hackerrank.svg" alt='Hackerrank' height='50' width='118'>
+    <img src="https://cdn.cdnlogo.com/logos/u/21/udemy-wordmark.svg" alt='' height='50' width='118'>
+  </div>
+</div> -->
 
-  <section class="">
-  </section>
+<hr>
+
   <!-- <img src="assets/img/header.png" class="img-fluid" alt="Photo Profile"> -->
+
+  <section class="section-title">
+    <!-- <img src="assets/img/header.png" class="img-fluid" alt="Photo Profile"> -->
+  </section>
+
 
   <main id="main">
 
@@ -965,7 +986,7 @@
             </div>
           </div>
 
-          <div id="" class="col-lg-3 col-md-6 portfolio-item filter-r">
+          <div id="#aws" class="col-lg-3 col-md-6 portfolio-item filter-r">
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/skill-builder-aws.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -977,7 +998,7 @@
             </div>
           </div>
 
-          <div id="" class="col-lg-3 col-md-6 portfolio-item filter-r">
+          <div id="#aws" class="col-lg-3 col-md-6 portfolio-item filter-r">
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/dicoding-aws.png" class="img-fluid" alt="">
               <div class="portfolio-info">
