--- a/index.html
+++ b/index.html
@@ -377,6 +377,18 @@
             </div>
 
             <div class="resume-item">
+              <h4>Bootcamp AWS re/Start</h4>
+              <h5>Mart 2023 - Present</h5><br>
+              <em>Orbit Future Academy</em>
+              <!-- <p> -->
+                <br>
+                <!-- Achievement: -->
+                <!-- <div style="margin-left: 1em;"> -->
+                <!-- <li>Overall score: /100</li> -->
+                <!-- </p> -->
+             </div>
+
+            <div class="resume-item">
               <h4>Bootcamp Google Cloud Fundamental</h4>
               <h5>Mart 2023 - Present</h5><br>
               <em>DTS KOMINFO | Google</em>
