--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-python">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-python">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-bank-churned/bank-churned.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -725,7 +725,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-python filter-ml">
             <div class="portfolio-wrap">
