--- a/pages/project-emotion-recognition.html
+++ b/pages/project-emotion-recognition.html
@@ -98,7 +98,7 @@
                   <strong>Category</strong> : Machine Learning, Classification,
                   Recognition, Emotion
                 </li>
-                <li><strong>Project date</strong> : Januari-Februari 2022</li>
+                <li><strong>Project date</strong> : Agustus 2022</li>
                 <li>
                   <strong>Project URL</strong> :
                   <a href="https://github.com/maulanakavaldo/">Github</a>
