--- a/pages/project-european-hotel.html
+++ b/pages/project-european-hotel.html
@@ -93,7 +93,7 @@
                 <li>
                   <strong>Category</strong> : Business, Satisfaction
                 </li>
-                <li><strong>Project date</strong> : </li>
+                <li><strong>Project date</strong> : September 2022</li>
                 <li>
                   <strong>Project URL</strong> :
                   <a href="https://github.com/maulanakavaldo/"
