--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
   </div>
 </div> -->
 
-<hr>
+  <img src="assets/img/header.png" class="img-fluid" alt="Photo Profile">
 
-  <!-- <img src="assets/img/header.png" class="img-fluid" alt="Photo Profile"> -->
+  <hr>
 
   <section class="section-title">
     <!-- <img src="assets/img/header.png" class="img-fluid" alt="Photo Profile"> -->
