--- a/pages/web-system-recommendation.html
+++ b/pages/web-system-recommendation.html
@@ -223,7 +223,8 @@
                 </li>
                 <li>
                   <strong>Demo</strong> :
-                  <a href="https://ahp-prodi.000webhostapp.com/" target="_blank"
+                  <!-- https://ahp-prodi.000webhostapp.com/ -->
+                  <a href="https://prodi-ahp.000webhostapp.com/" target="_blank"
                     >SRP - Program Studi</a
                   >
                 </li>
