--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">      
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Maulana Kavaldo</h1>
-      <p>I'm <span class="typed" data-typed-items="Fresh Graduate, Jr. Data Scientistr, Machine Learning, Cloud Computing, Data Enginee"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Fresh Graduate, Jr. Data Scientist, Machine Learning, Cloud Computing, Data Enginee"></span></p>
       <!-- <p>Universitas Teknologi Yogyakarta</p> -->
       <div class="social-links">
         <a href="https://github.com/maulana-kavaldo" target="_blank" class="github"><i class="bx bxl-github"></i></a>
@@ -882,6 +882,19 @@
         </div> -->
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+          
+          <div id="proa-gc" class="col-lg-3 col-md-6 portfolio-item filter-r" >
+            <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/gds_inco.png" class="img-fluid img-responsive thumb" alt="">
+              <div class="portfolio-info">
+                <h4>Green Digital Skills</h4>
+                <div class="portfolio-links">
+                  <a href="assets/img/certif_licen/gds_inco.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div id="proa-gc" class="col-lg-3 col-md-6 portfolio-item filter-r" >
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/proa-gc1.png" class="img-fluid img-responsive thumb" alt="">
